# Generated by Django 4.2.23 on 2025-09-08 22:27

from django.db import migrations, models
import django.db.models.deletion
import uuid


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('core', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Project',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('title', models.CharField(max_length=255)),
                ('description', models.TextField()),
                ('budget', models.DecimalField(blank=True, decimal_places=2, max_digits=10, null=True)),
                ('deadline', models.DateField(blank=True, null=True)),
                ('state', models.CharField(choices=[('OPEN', 'Abierto'), ('IN_PROGRESS', 'En Progreso'), ('COMPLETED', 'Completado'), ('CANCELLED', 'Cancelado')], default='OPEN', max_length=20)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('assigned_freelancer', models.ForeignKey(blank=True, help_text='Freelancer asignado al proyecto', null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='assigned_projects', to='core.freelancerprofile')),
                ('client', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='projects', to='core.clientprofile')),
            ],
            options={
                'verbose_name': 'Proyecto',
                'verbose_name_plural': 'Proyectos',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='ProjectApplication',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('message', models.TextField(blank=True, help_text='Mensaje opcional del freelancer')),
                ('status', models.CharField(choices=[('PENDING', 'Pendiente'), ('ACCEPTED', 'Aceptada'), ('REJECTED', 'Rechazada')], default='PENDING', max_length=20)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('freelancer', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='project_applications', to='core.freelancerprofile')),
                ('project', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='applications', to='projects.project')),
            ],
            options={
                'verbose_name': 'Aplicación al Proyecto',
                'verbose_name_plural': 'Aplicaciones a Proyectos',
                'ordering': ['-created_at'],
                'unique_together': {('project', 'freelancer')},
            },
        ),
    ]
